assets/styles/app.scss
@import "variable";

html {
    height: 100%;
}

body {
    min-width: 320px;
    min-height: 100%;
    position: relative;
    background-color: #0a0a0c;
}
.nuxt-loading-indicator {
    background: linear-gradient(90deg, #E151F7 65.38%, #5C47F5 82.43%)!important;
}
:root {
    --spacer: #{$spacer};
    --#{$prefix}font-size-lg: #{$font-size-lg};
    --#{$prefix}font-size-sm: #{$font-size-sm};
}

@each $breakpoint, $container-max-width in $container-max-widths {
    @include media-breakpoint-up($breakpoint, $grid-breakpoints) {
        .container-min {
            min-width: $container-max-width;
        }
    }
}

h1, h2, h3, h4, h5, h6 {
    font-weight: bold;
}

@include media-breakpoint-down(lg) {
    h1 {
        font-size: 1.625rem;
    }
    h2 {
        font-size: $h4-font-size !important;
    }
    h3 {
        font-size: $h5-font-size !important;
    }
    h4 {
        font-size: $h6-font-size !important;
    }
    h5 {
        font-size: $font-size-base !important;
    }
    h6 {
        font-size: $font-size-sm !important;
    }
}

h1 {
    font-weight: 900
}


h2 {
    font-weight: 800
}

// Offsets anchor headers to scroll past the top-bar
.container {
    h1, h2, h3, h4, h5, h6 {
        &[id] {
            --anchor-offset: calc(var(--top-bar-height) + var(--spacer));
            margin-top: calc(var(--anchor-offset) * -1);
            padding-top: var(--anchor-offset);
        }
    }
}

main {
    padding-top: 67px;

    @include media-breakpoint-down(lg) {
        padding-top: 60px;
    }

    > div {
        overflow-x: hidden;
    }
}

// bootstrap
table.table {
    thead {
        border-bottom: 2px solid var(--bs-black);
    }
}

.alert {
    > *:last-child {
        margin-bottom: 0;
    }
}

blockquote.blockquote {
    border-left: 4px solid var(--bs-gray-500);
    padding-left: $spacer;
    color: var(--bs-gray-500);
    font-size: 1rem;
}

.btn {
    font-weight: bold;
    border: 0;
    border-radius: $border-radius;
}

.btn:not(.btn-lg):not(.btn-sm) {
    padding: 0.75rem 1.5rem;
    font-weight: bold;
}

.btn.btn-lg {
    padding: 1.20rem 2rem;
}

.btn.btn-sm {
    padding: 0.375rem 1rem;
}


.modal-full {
    .modal-dialog {
        width: 95%;
        max-width: none;
    }
}

@keyframes rotate {
    100% {
        transform: rotate(1turn);
    }
}

.btn-animated {
    --border-size: 1px;
    position: relative;
    z-index: 0;
    overflow: hidden;
    border: 0;
    color: var(--bs-white);

    &::before {
        content: '';
        position: absolute;
        z-index: -2;
        left: -50%;
        top: -300%;
        width: 200%;
        height: 760%;
        animation: rotate 6s linear infinite;
    }


    &:active {
        color: var(--bs-white) !important;
    }

    &:hover {
        color: var(--bs-white) !important;
        &::before {
            animation-duration: 1.5s;
        }
    }

    &::after {
        content: '';
        position: absolute;
        z-index: -1;
        left: 1px;
        top: 1px;
        width: calc(100% - 2px);
        height: calc(100% - 2px);
        background: #0A0113;
        border-radius: $border-radius;
        transition: background-color 0.2s ease;
    }
}

.btn-dark {
    border: $btn-dark-border;
    background-color: $black-4;

    &:hover {
        background-color: $black-2;
        border-color: rgba(255, 255, 255, 0.12);
    }
}

.btn-dark-animated {
    &::before {
        background: conic-gradient(#B010FB,
            #DE97FF 10%,
            #A227DB,
            transparent 50%,
            #A610EC);
    }

    &::after {
        background: #0A0113;
    }

    &:hover {
        filter: drop-shadow(16px 39px 17px rgba(149, 22, 208, 0.01)) drop-shadow(9px 22px 14px rgba(149, 22, 208, 0.05)) drop-shadow(4px 10px 11px rgba(149, 22, 208, 0.09)) drop-shadow(1px 2px 6px rgba(149, 22, 208, 0.1));

        &::after {
            background: #230542;
        }
    }
}

.btn-purple-animated {
    &::before {
        background: conic-gradient(#B010FB,
            #DE97FF 10%,
            #A227DB,
            transparent 50%,
            #A610EC);
    }

    &::after {
        background: #4B0AAA;
    }

    &:hover {
        box-shadow: 1px 2px 4px 0px rgba(101, 24, 216, 0.29), 3px 6px 7px 0px rgba(101, 24, 216, 0.26), 7px 14px 10px 0px rgba(101, 24, 216, 0.15), 13px 25px 11px 0px rgba(101, 24, 216, 0.04), 20px 40px 12px 0px rgba(101, 24, 216, 0.01);

        &::after {
            background: #650DE4;
        }
    }
}




// component
.hero {
    padding-top: calc($spacer * 8);
    padding-bottom: calc($spacer * 6);

    &.hero-sm {
        padding-top: 5rem;
        padding-bottom: 3rem;
    }

    h1, p {
        max-width: $baseline-max-width;
    }

    &.text-center {
        max-width: none;

        h1, p {
            margin: 0 auto;
        }
    }

    h1 {
        font-size: 3.25rem;
        padding-bottom: 1.5rem;
    }

    p.baseline {
        font-size: $font-size-xl;
        padding-bottom: 1.5rem;
    }

    p.overline {
        font-family: var(--bs-font-monospace);
        font-size: $font-size-xl;
        text-transform: uppercase;
        font-weight: bold;
        margin-bottom: 1rem;
    }

    .btn-secondary {
        background-color: rgba($white, 10%);
    }

    .dot {
        color: $pink;
        font-family: var(--bs-font-monospace);
        font-size: 52px;
    }

    .cta {
        padding-bottom: calc($spacer * 2);
    }
}

.card {
    border-radius: $border-radius-lg;
}

.card-group {
    display: flex;
    align-items: stretch;
    justify-content: space-around;

    .card {
        height: 100%;
        border-radius: $border-radius-lg;
    }

    &.card-centered {
        text-align: center;
        background: url("/landing/shadow.svg") no-repeat center center;
        justify-content: center;

        @include media-breakpoint-down(xl) {
            background-size: contain;
        }

        @include media-breakpoint-down(lg) {
            background: none;
        }

        .card-title {
            font-size: $font-size-lg;
        }

        .card-icon {
            display: block;
            float: none;
            margin: 0 auto $spacer;

            .material-design-icon {
                margin-top: 5px;
            }
        }
    }

    &.no-shadow {
        background: none;
    }
}

.card {
    border-color: transparent;

    .cart-title-container {
        display: flex;
        align-items: center;
    }

    .card-icon {
        width: 50px;
        height: 50px;
        background-color: $primary;
        border-radius: $border-radius-lg;
        color: var(--bs-white);
        text-align: center;
        display: flex;
        font-size: 2rem;
        float: left;
        margin-right: $spacer;
        align-items: center;
        justify-content: center;
        margin-bottom: $spacer;

        img {
            width: 90% !important;
            height: 90% !important;
        }

        .material-design-icon {
            margin-top: -10px;
            width: 42px;
            height: 42px;
        }

        .material-design-icon__svg {
            width: 42px;
            height: 42px;
        }
    }

    h5.card-title {
        color: $purple-1;
        font-size: $h4-font-size;
    }

    p.card-text {
        clear: left;
    }
}


.scroller {
    overflow-x: hidden;

    &::-webkit-scrollbar {
        width: 5px;
        height: 5px;
    }

    &::-webkit-scrollbar-track {
        //-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
        -webkit-border-radius: 10px;
    }

    &::-webkit-scrollbar-thumb {
        -webkit-border-radius: 10px;
        background: var(--bs-gray-300);
    }
}

.type-mark {
    background-color: var(--bs-secondary);
    border-radius: var(--bs-border-radius);
    color: var(--bs-white);
    font-size: $font-size-sm;
    margin-right: 5px;
}

.baseline-max-width {
    max-width: $baseline-max-width;
}

@keyframes slide-in {
    0% {
        transform: translateY(1rem);
        opacity: 0;
    }

    100% {
        transform: translateY(0rem);
        opacity: 1;
    }

    0% {
        transform: translateY(1rem);
        opacity: 0;
    }
}

.animation-slide-in {
    animation-duration: 0.2s;
    animation-fill-mode: backwards;
    animation-name: slide-in;
}

.animation-slide-up{
    top: 0 !important;
    box-shadow: none !important;
    transform: translateY(-300%) !important;

    * {
        padding-bottom: 0;
    }
}

.animation-slide-right{
    right: 0 !important;
    box-shadow: none !important;
    transform: translateX(300%) !important;
}

:root{
    --spacer: #{$spacer};
}

#cc-main {
    --cc-font-family: var(--bs-body-font-family);
    --cc-btn-primary-color: #FFF;
    --cc-btn-primary-bg: var(--bs-primary);
    --cc-btn-primary-hover-bg: #8d45ff;
    --cc-btn-primary-hover-color: $white;
    --cc-btn-primary-border-color: var(--bs-primary);
}

.medium-zoom-overlay {
    z-index: $zindex-modal+1;
}

.medium-zoom-image--opened {
    z-index: $zindex-modal+2;
}

.video-responsive {
    overflow:hidden;
    padding-bottom:52.25%;
    position:relative;
    height:0;
}

.video-responsive iframe {
    left:0;
    top:0;
    height:100%;
    width:100%;
    position:absolute;
}

.top-breadcrumb {
    font-size: $font-size-sm;
    color: var(--bs-primary);
    font-family: var(--bs-font-monospace);
    font-weight: 800;
    text-transform: uppercase;
    max-width: 700px;
    .bd-gutter & {
        margin: 0 auto;

    }

    &:after {
        content: '';
        position: absolute;
        margin-top: calc($font-size-sm / 1.5);
        margin-left: $spacer;
        display: inline-block;
        height: 2px;
        width: 51px;
        background: var(--bs-pink);
    }
}

.line-path-animation {
    transition-duration: 1s;
}

.form-select {
    --bs-form-select-bg-img: url("/landing/plugins/select-arrow.svg") !important;
}

@include media-breakpoint-down(lg) {
    .desktop {
        display: none;
    }
}

@include media-breakpoint-up(lg) {
    .mobile {
        display: none;
    }
}
.plugin-tooltip {
    .tooltip-inner {
        text-align: left !important;
        max-height: 20rem;
        overflow: auto;
        background-color: rgb(0,0,0,.6);
        backdrop-filter: blur(4px);
        color: var(--kestra-io-token-color-white);
        border: 1px solid var(--kestra-io-token-color-border-primary);
        border-radius: 1em;
        max-width: 80ch;
        padding: 1rem;

        p:not(li p) {
            margin-bottom: 0;
            line-height: 1.625rem;
        }

        li::marker, a {
            color: var(--kestra-io-token-text-link-default);
        }

        li {
            line-height: 1.25rem;
        }

        &::-webkit-scrollbar {
            width: 2px;
            height: 2px;
        }

        &::-webkit-scrollbar-track {
            background: var(--card-bg);
        }

        &::-webkit-scrollbar-thumb {
            background: var(--bs-primary);
            border-radius: 0px;
        }
    }
    .tooltip-arrow {
        --bs-tooltip-bg: var(--kestra-io-token-color-border-primary);
    }
}

.bd-content .bd-markdown .code-block{
    code{
        white-space: pre-wrap;
    }
    pre.shiki{
        margin-top: 0;
        code {
            display: block;
        }
    }
}


@import "./docs";

